--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
     max-width: 400px;
 }
 
-#figures-container {
+#figures-container, #baf-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -28,5 +28,12 @@ body {
 .card img {
     width: 100%;
     border-radius: 5px;
+}
+
+a {
+    display: block;
+    margin: 10px 0;
+    text-decoration: none;
+    color: blue;
 }
 
