--- a/style.css
+++ b/style.css
@@ -3,14 +3,7 @@ body {
     text-align: center;
 }
 
-#search {
-    margin-bottom: 20px;
-    padding: 10px;
-    width: 80%;
-    max-width: 400px;
-}
-
-#figures-container, #baf-container {
+#figures-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -22,7 +15,9 @@ body {
     border: 1px solid #ddd;
     border-radius: 10px;
     padding: 10px;
-    box-shadow: 2px 2px 5px rgba(0,0,0,0.1);
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+    position: relative; /* Pour positionner l'élément "Non disponible" si nécessaire */
+    transition: all 0.3s ease;
 }
 
 .card img {
@@ -30,3 +25,30 @@ body {
     border-radius: 5px;
 }
 
+/* Styles pour les figurines que tu possèdes */
+.card.owned {
+    border: 2px solid green;  /* Bordure verte pour les figurines possédées */
+}
+
+/* Styles pour les figurines que tu ne possèdes pas */
+.card.not-owned {
+    border: 2px solid red;  /* Bordure rouge pour les figurines non possédées */
+}
+
+.owner-status {
+    font-size: 14px;
+    font-weight: bold;
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+/* Style spécifique pour les figurines non possédées */
+.card.not-owned .owner-status {
+    color: red;
+}
+
+.card.owned .owner-status {
+    color: green;
+}
